--- a/themes/hugo-geekdoc-0.6.0/layouts/partials/head.html
+++ b/themes/hugo-geekdoc-0.6.0/layouts/partials/head.html
@@ -16,17 +16,17 @@
 <link rel="preload" as="font" href="{{ "fonts/DroidSans.woff2" | relURL }}" type="font/woff2" crossorigin="anonymous">
 <link rel="preload" as="font" href="{{ "fonts/GeekdocIcons.woff2" | relURL }}" type="font/woff2" crossorigin="anonymous">
 
-<link rel="preload" href="{{ "main.min.css" | relURL }}" as="style">
-<link rel="stylesheet" href="{{ "main.min.css" | relURL }}" media="all">
+<link rel="preload" href="{{ "main.min.css" | relURL }}" as="style" crossorigin="anonymous">
+<link rel="stylesheet" href="{{ "main.min.css" | relURL }}" media="all" crossorigin="anonymous">
 
-<link rel="preload" href="{{ "mobile.min.css" | relURL }}" as="style">
-<link rel="stylesheet" href="{{ "mobile.min.css" | relURL }}" media="screen and (max-width: 45rem)">
+<link rel="preload" href="{{ "mobile.min.css" | relURL }}" as="style" crossorigin="anonymous">
+<link rel="stylesheet" href="{{ "mobile.min.css" | relURL }}" media="screen and (max-width: 45rem)" crossorigin="anonymous">
 
-<link rel="preload" href="{{ "print.min.css" | relURL }}" as="style">
-<link rel="stylesheet" href="{{ "print.min.css" | relURL }}" media="print">
+<link rel="preload" href="{{ "print.min.css" | relURL }}" as="style" crossorigin="anonymous">
+<link rel="stylesheet" href="{{ "print.min.css" | relURL }}" media="print" crossorigin="anonymous">
 
-<link rel="preload" href="{{ "custom.css" | relURL }}" as="style">
-<link rel="stylesheet" href="{{ "custom.css" | relURL }}" media="all">
+<link rel="preload" href="{{ "custom.css" | relURL }}" as="style" crossorigin="anonymous">
+<link rel="stylesheet" href="{{ "custom.css" | relURL }}" media="all" crossorigin="anonymous">
 
 {{ with .OutputFormats.Get "rss" -}}
     {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
