--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,10 +1,11 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="{{ partial "title" . }}">
+<meta name="theme-color" content="#000000">
 
 <title>{{ partial "title" . }} | {{ .Site.Title -}}</title>
 
-<link rel="icon" href="{{ "favicon/favicon-32x32.png" | relURL }}" type="image/x-icon">
+<link rel="icon" href="{{ "favicon/favicon.svg" | relURL }}">
 
 <link rel="preload" as="font" href="{{ "fonts/Metropolis.woff2" | relURL }}" type="font/woff2" crossorigin="anonymous">
 <link rel="preload" as="font" href="{{ "fonts/LiberationSans.woff2" | relURL }}" type="font/woff2" crossorigin="anonymous">
@@ -15,17 +16,17 @@
 <link rel="preload" as="font" href="{{ "fonts/DroidSans.woff2" | relURL }}" type="font/woff2" crossorigin="anonymous">
 <link rel="preload" as="font" href="{{ "fonts/GeekdocIcons.woff2" | relURL }}" type="font/woff2" crossorigin="anonymous">
 
-<link rel="preload" href="{{ index .Site.Data.assets "main.min.css" | relURL }}" as="style">
-<link rel="stylesheet" href="{{ index .Site.Data.assets "main.min.css" | relURL }}" media="all">
+<link rel="preload" href="{{ "main.min.css" | relURL }}" as="style" crossorigin="anonymous">
+<link rel="stylesheet" href="{{ "main.min.css" | relURL }}" media="all" crossorigin="anonymous">
 
-<link rel="preload" href="{{ index .Site.Data.assets "mobile.min.css" | relURL }}" as="style">
-<link rel="stylesheet" href="{{ index .Site.Data.assets "mobile.min.css" | relURL }}" media="screen and (max-width: 45rem)">
+<link rel="preload" href="{{ "mobile.min.css" | relURL }}" as="style" crossorigin="anonymous">
+<link rel="stylesheet" href="{{ "mobile.min.css" | relURL }}" media="screen and (max-width: 45rem)" crossorigin="anonymous">
 
-<link rel="preload" href="{{ index .Site.Data.assets "print.min.css" | relURL }}" as="style">
-<link rel="stylesheet" href="{{ index .Site.Data.assets "print.min.css" | relURL }}" media="print">
+<link rel="preload" href="{{ "print.min.css" | relURL }}" as="style" crossorigin="anonymous">
+<link rel="stylesheet" href="{{ "print.min.css" | relURL }}" media="print" crossorigin="anonymous">
 
-<link rel="preload" href="{{ index .Site.Data.assets "custom.css" | relURL }}" as="style">
-<link rel="stylesheet" href="{{ index .Site.Data.assets "custom.css" | relURL }}" media="all">
+<link rel="preload" href="{{ "custom.css" | relURL }}" as="style" crossorigin="anonymous">
+<link rel="stylesheet" href="{{ "custom.css" | relURL }}" media="all" crossorigin="anonymous">
 
 {{ with .OutputFormats.Get "rss" -}}
     {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
