--- a/layouts/partials/site-footer.html
+++ b/layouts/partials/site-footer.html
@@ -1,7 +1,11 @@
 <footer class="gdoc-footer">
+
+<!--
     <div class="container flex flex-wrap">
         <span class="gdoc-footer__item">
-            Built with <a href="https://gohugo.io/" class="gdoc-footer__link">Hugo</a> and
+            Built with 
+			<a href="https://r-project.org/" class="gdoc-footer__link">R</a> and
+			<a href="https://gohugo.io/" class="gdoc-footer__link">Hugo</a> and
             <svg class="icon heart"><use xlink:href="#heart"></use></svg>
         </span>
         {{ with .Site.Params.GeekdocLegalNotice }}
@@ -15,4 +19,5 @@
         </span>
         {{ end }}
     </div>
+-->
 </footer>
